deployment/local-kubernetes/identity-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ittrap-identity-service-deployment
spec:
  selector:
    matchLabels:
      app: ittrap-identity-service
  template:
    metadata:
      labels:
        app: ittrap-identity-service
    spec:
      containers:
      - name: ittrap-identity-service
        image: docker.io/kotzakhar/ittrap-identity-service:latest
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "300m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ittrap-identity-service-nodeport
spec:
  type: NodePort
  selector:
    app: ittrap-identity-service
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30002
---
apiVersion: v1
kind: Service
metadata:
  name: ittrap-identity-service
spec:
  type: ClusterIP
  selector:
    app: ittrap-identity-service
  ports:
  - port: 80
    targetPort: 80
