deployment/local-kubernetes/location-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ittrap-location-service-deployment
spec:
  selector:
    matchLabels:
      app: ittrap-location-service
  template:
    metadata:
      labels:
        app: ittrap-location-service
    spec:
      containers:
      - name: ittrap-location-service
        image: docker.io/kotzakhar/ittrap-location-service:latest
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "300m"
        ports:
        - containerPort: 80
        - containerPort: 81
---
apiVersion: v1
kind: Service
metadata:
  name: ittrap-location-service-nodeport
spec:
  type: NodePort
  selector:
    app: ittrap-location-service
  ports:
  - name: http-port
    port: 80
    targetPort: 80
    nodePort: 30005
  - name: grpc-port
    port: 81
    targetPort: 81
    nodePort: 31005
---
apiVersion: v1
kind: Service
metadata:
  name: ittrap-location-service
spec:
  type: ClusterIP
  selector:
    app: ittrap-location-service
  ports:
  - name: http-port
    port: 80
    targetPort: 80
  - name: grpc-port
    port: 81
    targetPort: 81
